<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done_orange_24dp"
        android:title="Save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:title="Delete"
        app:showAsAction="never"/>
</menu>